<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/want_to_share_your_file"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/idLLUploadPdf"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/upload_file_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/idLAVUploadStatus"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            android:visibility="gone"
            app:lottie_rawRes="@raw/uploading_file"
            app:lottie_loop="true"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/idLAVUploadDone"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/upload_complete"
            android:visibility="gone"
            app:lottie_loop="true"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/idLAVUploadFailed"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/upload_failed"
            android:visibility="gone"
            app:lottie_loop="true"/>

        <ImageView
            android:id="@+id/idIVUploadIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_upload_icon_new" />

        <TextView
            android:id="@+id/idTVUploadStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_horizontal"
            android:text="@string/choose_a_file"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/idTVSuggest10Mb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/upto_100_mb"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/idMCVUploadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:outlineAmbientShadowColor="@color/main_color_lite"
        android:outlineSpotShadowColor="@color/main_color_lite"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLLUploadPdf"
        tools:targetApi="p">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_file" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/upload_your_file"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:singleLine="false"
                    android:text="@string/select_any_type_of_file"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/idIVNextStepPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_circle_arrow_right" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/idTVLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="Logout"
        android:textColor="@color/divider_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMCVUploadFile" />
</androidx.constraintlayout.widget.ConstraintLayout>